%%   }
%%   \subsection{Installation}{
%%     \itemize{
%%       \item .
%%     }
%%   }
%%   \subsection{Documentation}{
%%     \itemize{
%%       \item .
%%     }
%%   }
%%   \subsection{Internals}{
%%     \itemize{
%%       \item .
%%     }
%%   }
%% }

\name{NEWS}
\title{News for \R{} Package \pkg{fastbeta}}
\newcommand{\GH}{\href{https://github.com/davidearn/fastbeta/issues/#1}{GH##1}}

\section{Changes in version 0.4.1 (2025-06-05)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item .
    }
  }
  \subsection{Deprecated and Defunct}{
    \itemize{
      \item .
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item The expression for \eqn{\text{d}Y/\text{d}\tau}{dY/dtau}
      used by \code{sir.aoi} was wrong.
    }
  }
  \subsection{New Features}{
    \itemize{
      \item \code{sir.aoi} accepts new argument \code{method}, allowing
      the user to select a solver different from \code{lsoda}.

      \item \code{sir.aoi(\dots, aggregate = TRUE)} includes the force
      of infection and incidence.

      \item \code{sir.aoi} accepts new argument \code{eps} in order to
      support equations with equal, nonzero rates of birth and death.

      \item \code{sir.aoi} accepts new arguments \code{H} and
      \code{Hargs}, enabling the user to set a susceptible
      hetereogeneity function.

      \item The method for generic function \code{summary} and class
      \code{sir.aoi} accepts new argument \code{name}, enabling
      approximation of tail exponents of different variables.

      \item Function \code{cbind.ts} for working around \PR{18583}.
    }
  }
  \subsection{Installation}{
    \itemize{
      \item .
    }
  }
  \subsection{Documentation}{
    \itemize{
      \item .
    }
  }
  \subsection{Internals}{
    \itemize{
      \item .
    }
  }
}

\section{Changes in version 0.4.0 (2025-04-28)}{
  \subsection{Deprecated and Defunct}{
    \itemize{
      \item \code{seir.canonical} is removed in favour of more general