@@ -1,6 +1,6 @@
 Package: fastbeta
 Version: 0.4.1
-Date: 2025-06-05
+Date: 2025-07-02
 Title:
 	Fast Approximation of Time-Varying Infectious Disease Transmission
 	Rates
