@@ -40,7 +40,7 @@
 \title{News for \R{} Package \pkg{fastbeta}}
 \newcommand{\GH}{\href{https://github.com/davidearn/fastbeta/issues/#1}{GH##1}}
 
-\section{Changes in version 0.4.1 (2025-06-05)}{
+\section{Changes in version 0.4.1 (2025-07-02)}{
   \subsection{Significant User-Visible Changes}{
     \itemize{
       \item .
@@ -67,6 +67,9 @@
 
       \item \code{sir.aoi} accepts new argument \code{eps} in order to
       support equations with equal, nonzero rates of birth and death.
+
+      \item \code{sir.aoi} accepts new arguments \code{F} and
+      \code{Fargs}, enabling the user to set a forcing function.
 
       \item \code{sir.aoi} accepts new arguments \code{H} and
       \code{Hargs}, enabling the user to set a susceptible
